# skolmaten

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  README.md  default.nix  flake.nix  pyproject.toml  requirements.txt  setup.py  sm.code-workspace
.github/workflows/: pypi_release.yaml  tests.yml
Skolmaten/: __init__.py  constants.py  helpers.py  skolmaten.py
skolmaten/: __init__.py  skolmaten.py
tests/: url.py
